--- a/Carp/View/Search View/SearchView.xib
+++ b/Carp/View/Search View/SearchView.xib
@@ -19,7 +19,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchView" customModule="Main_Challenge" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchView" customModule="Carp" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Wde-id-1oE"/>
                 <outlet property="iconLabel" destination="cAI-Zf-Fqm" id="mYr-oq-kTv"/>
@@ -48,7 +48,7 @@
                         <action selector="primaryActionTriggered:" destination="-1" eventType="primaryActionTriggered" id="i5d-5s-rR9"/>
                     </connections>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wxa-Tq-YhV">
+                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wxa-Tq-YhV">
                     <rect key="frame" x="378" y="0.0" width="73" height="73"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Wxa-Tq-YhV" secondAttribute="height" multiplier="1:1" id="smR-ZA-ulN"/>
