--- a/Carp/View/Search/SearchView.xib
+++ b/Carp/View/Search/SearchView.xib
@@ -37,7 +37,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JjW-Bd-2jP">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JjW-Bd-2jP">
                     <rect key="frame" x="51.5" y="21.5" width="326.5" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="17"/>
