--- a/Carp/View/Results View/Results Cell/ResultsCell.xib
+++ b/Carp/View/Results View/Results Cell/ResultsCell.xib
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -21,80 +19,81 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="resultsCell" rowHeight="77" id="FPE-Bc-cgt" customClass="ResultsCell" customModule="Main_Challenge" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="resultsCell" rowHeight="74" id="FPE-Bc-cgt" customClass="ResultsCell" customModule="Carp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="456" height="77"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FPE-Bc-cgt" id="PKU-Ra-9rv">
                 <rect key="frame" x="0.0" y="0.0" width="456" height="76.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZFA-2s-AS9">
-                        <rect key="frame" x="10" y="10" width="56.5" height="56.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="ZFA-2s-AS9" secondAttribute="height" id="UKr-ub-qvg"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alfredo Gulismão da Silva" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSU-aS-8Hf">
-                        <rect key="frame" x="76.5" y="21" width="145" height="16"/>
-                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$: 4,50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSU-aS-8Hf">
+                        <rect key="frame" x="20" y="12.5" width="87" height="29"/>
+                        <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="24"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIX-ah-A3g">
-                        <rect key="frame" x="76.5" y="43.5" width="8.5" height="12"/>
+                        <rect key="frame" x="20" y="47.5" width="8" height="12"/>
                         <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xK-50-fPg">
-                        <rect key="frame" x="90" y="42" width="9" height="15"/>
+                        <rect key="frame" x="33" y="46.5" width="8" height="14"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yDb-DY-EMi">
-                        <rect key="frame" x="114" y="44" width="8.5" height="12"/>
+                        <rect key="frame" x="56" y="47.5" width="8" height="12"/>
                         <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zpK-jv-0vN">
-                        <rect key="frame" x="128" y="42" width="9" height="15"/>
+                        <rect key="frame" x="69" y="46.5" width="8" height="14"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYo-d9-ezf">
-                        <rect key="frame" x="152" y="44" width="8.5" height="12"/>
+                        <rect key="frame" x="92" y="47.5" width="8" height="12"/>
                         <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hl-kr-fiC">
-                        <rect key="frame" x="165" y="42" width="9" height="15"/>
+                        <rect key="frame" x="105" y="46.5" width="8" height="14"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ouc-te-76H">
+                        <rect key="frame" x="386" y="18.5" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="ZMF-fq-RWv"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="aic-mV-8Q7"/>
+                            <constraint firstAttribute="width" priority="999" constant="40" id="plz-FZ-Cjz"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ZFA-2s-AS9" firstAttribute="leading" secondItem="PKU-Ra-9rv" secondAttribute="leading" constant="10" id="5ce-aK-Bc5"/>
+                    <constraint firstItem="PIX-ah-A3g" firstAttribute="centerY" secondItem="PKU-Ra-9rv" secondAttribute="centerY" multiplier="1.4" id="3Gf-kr-SOc"/>
+                    <constraint firstItem="LSU-aS-8Hf" firstAttribute="leading" secondItem="PKU-Ra-9rv" secondAttribute="leading" constant="20" id="3VC-uv-pM0"/>
                     <constraint firstItem="yDb-DY-EMi" firstAttribute="leading" secondItem="5xK-50-fPg" secondAttribute="trailing" constant="15" id="7UM-nb-TKI"/>
-                    <constraint firstAttribute="bottom" secondItem="ZFA-2s-AS9" secondAttribute="bottom" constant="10" id="9fo-Dc-muv"/>
                     <constraint firstItem="5hl-kr-fiC" firstAttribute="centerY" secondItem="rYo-d9-ezf" secondAttribute="centerY" id="AcE-Fn-Tpe"/>
-                    <constraint firstItem="ZFA-2s-AS9" firstAttribute="top" secondItem="PKU-Ra-9rv" secondAttribute="top" constant="10" id="DJ2-yj-uIT"/>
-                    <constraint firstItem="LSU-aS-8Hf" firstAttribute="leading" secondItem="ZFA-2s-AS9" secondAttribute="trailing" constant="10" id="KiA-fy-RDZ"/>
+                    <constraint firstItem="LSU-aS-8Hf" firstAttribute="centerY" secondItem="PKU-Ra-9rv" secondAttribute="centerY" multiplier="0.7" id="Peq-Sk-M5Z"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="ouc-te-76H" secondAttribute="trailing" constant="10" id="UrU-Lz-VOn"/>
                     <constraint firstItem="5xK-50-fPg" firstAttribute="centerY" secondItem="PIX-ah-A3g" secondAttribute="centerY" id="X6Y-42-qWW"/>
                     <constraint firstItem="rYo-d9-ezf" firstAttribute="centerY" secondItem="zpK-jv-0vN" secondAttribute="centerY" id="XL5-VP-ra5"/>
-                    <constraint firstItem="LSU-aS-8Hf" firstAttribute="centerY" secondItem="ZFA-2s-AS9" secondAttribute="centerY" multiplier="0.75" id="YGC-Lm-Zlr"/>
-                    <constraint firstItem="PIX-ah-A3g" firstAttribute="centerY" secondItem="ZFA-2s-AS9" secondAttribute="centerY" multiplier="1.3" id="ZqA-uN-QDx"/>
+                    <constraint firstItem="PIX-ah-A3g" firstAttribute="leading" secondItem="LSU-aS-8Hf" secondAttribute="leading" id="auY-OS-RsS"/>
                     <constraint firstItem="5hl-kr-fiC" firstAttribute="leading" secondItem="rYo-d9-ezf" secondAttribute="trailing" constant="5" id="bdC-5g-xUf"/>
                     <constraint firstItem="5xK-50-fPg" firstAttribute="leading" secondItem="PIX-ah-A3g" secondAttribute="trailing" constant="5" id="cNR-Al-qFA"/>
                     <constraint firstItem="zpK-jv-0vN" firstAttribute="centerY" secondItem="yDb-DY-EMi" secondAttribute="centerY" id="exz-kp-HDf"/>
                     <constraint firstItem="rYo-d9-ezf" firstAttribute="leading" secondItem="zpK-jv-0vN" secondAttribute="trailing" constant="15" id="juw-h6-Hw8"/>
                     <constraint firstItem="yDb-DY-EMi" firstAttribute="centerY" secondItem="5xK-50-fPg" secondAttribute="centerY" id="kFZ-4D-eq8"/>
-                    <constraint firstItem="PIX-ah-A3g" firstAttribute="leading" secondItem="ZFA-2s-AS9" secondAttribute="trailing" constant="10" id="ltE-wS-8X7"/>
                     <constraint firstItem="zpK-jv-0vN" firstAttribute="leading" secondItem="yDb-DY-EMi" secondAttribute="trailing" constant="5" id="msd-qk-PJt"/>
+                    <constraint firstItem="ouc-te-76H" firstAttribute="centerY" secondItem="PKU-Ra-9rv" secondAttribute="centerY" id="pBc-bG-YQS"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -102,10 +101,10 @@
                 <outlet property="destinyIcon" destination="yDb-DY-EMi" id="hFv-YD-boB"/>
                 <outlet property="originDistanceLabel" destination="5xK-50-fPg" id="EH3-ue-jVa"/>
                 <outlet property="originIcon" destination="PIX-ah-A3g" id="lOs-E2-S7H"/>
+                <outlet property="priceLabel" destination="LSU-aS-8Hf" id="ST5-Xg-2dR"/>
                 <outlet property="timeIcon" destination="rYo-d9-ezf" id="WTG-oo-g7b"/>
                 <outlet property="timeLabel" destination="5hl-kr-fiC" id="dlF-r2-6h8"/>
-                <outlet property="userNameLabel" destination="LSU-aS-8Hf" id="ST5-Xg-2dR"/>
-                <outlet property="userProfileImage" destination="ZFA-2s-AS9" id="Vo3-Qi-SjZ"/>
+                <outlet property="usersStackView" destination="ouc-te-76H" id="J6c-ZE-ykk"/>
             </connections>
             <point key="canvasLocation" x="38" y="56.5"/>
         </tableViewCell>
