--- a/Carp/View/RideDetails View/RideDetailsView.xib
+++ b/Carp/View/RideDetails View/RideDetailsView.xib
@@ -36,6 +36,7 @@
                 <outlet property="originTextField" destination="zFy-jy-MyZ" id="01f-bt-h81"/>
                 <outlet property="restrictionsIcon" destination="nDj-sO-kTf" id="cPi-Ke-23L"/>
                 <outlet property="restrictionsTextField" destination="cDv-Qg-c9s" id="V8K-Pa-hjc"/>
+                <outlet property="searchButton" destination="bja-Qh-l0X" id="gbW-WW-VQf"/>
                 <outlet property="seatsIcon" destination="SGf-wS-TW1" id="PSQ-RH-I1m"/>
                 <outlet property="servicesIconsStackView" destination="YK2-vc-8aR" id="ItX-J4-vCf"/>
                 <outlet property="threeSeatsButton" destination="Jkh-bM-Q6b" id="Muh-pu-0M9"/>
