UsersStackView bug fixed

--- a/Carp/View/Results View/Results Cell/ResultsCell.xib
+++ b/Carp/View/Results View/Results Cell/ResultsCell.xib
@@ -68,7 +68,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ouc-te-76H">
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ouc-te-76H" customClass="UsersStackView" customModule="Carp" customModuleProvider="target">
                         <rect key="frame" x="386" y="18.5" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="ZMF-fq-RWv"/>
