--- a/Carp/View/Alert/AlertView.xib
+++ b/Carp/View/Alert/AlertView.xib
@@ -99,6 +99,9 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0H7-rq-YLC">
                                     <rect key="frame" x="25" y="25" width="325" height="50"/>
                                     <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="didPressDoneButton:" destination="-1" eventType="touchUpInside" id="HuN-5Y-Swn"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
