--- a/Carp/View/RideDetails View/RideDetailsView.xib
+++ b/Carp/View/RideDetails View/RideDetailsView.xib
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -55,25 +51,25 @@
                     <rect key="frame" x="0.0" y="0.0" width="45" height="235"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q0e-6e-kDN">
-                            <rect key="frame" x="18.5" y="31.5" width="8.5" height="12"/>
+                            <rect key="frame" x="18.5" y="30.5" width="8" height="14"/>
                             <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="12"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cd3-vh-SQT">
-                            <rect key="frame" x="17.5" y="72" width="10.5" height="15"/>
+                            <rect key="frame" x="17.5" y="71" width="10" height="17.5"/>
                             <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FPp-H3-Kd1">
-                            <rect key="frame" x="18" y="131.5" width="9.5" height="14"/>
+                            <rect key="frame" x="18" y="130.5" width="9.5" height="16.5"/>
                             <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGf-wS-TW1">
-                            <rect key="frame" x="17" y="189.5" width="11" height="16"/>
+                            <rect key="frame" x="17.5" y="188" width="10.5" height="19"/>
                             <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="16"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -87,7 +83,7 @@
                         <constraint firstItem="Cd3-vh-SQT" firstAttribute="centerX" secondItem="AvC-90-CcZ" secondAttribute="centerX" id="xCy-AS-PJe"/>
                     </constraints>
                 </view>
-                <textField autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zFy-jy-MyZ" customClass="TextField" customModule="Carp" customModuleProvider="target">
+                <textField autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zFy-jy-MyZ" customClass="BoxTextField" customModule="Carp" customModuleProvider="target">
                     <rect key="frame" x="45" y="20" width="310" height="35"/>
                     <color key="backgroundColor" red="0.83570172639999996" green="0.0" blue="0.50049476159999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -97,14 +93,14 @@
                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="17"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s4h-Wh-6Fm" customClass="TextField" customModule="Carp" customModuleProvider="target">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s4h-Wh-6Fm" customClass="BoxTextField" customModule="Carp" customModuleProvider="target">
                     <rect key="frame" x="45" y="62" width="310" height="35"/>
                     <color key="backgroundColor" red="0.83570172639999996" green="0.0" blue="0.50049476159999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KDJ-ZV-oK5" customClass="TextField" customModule="Carp" customModuleProvider="target">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KDJ-ZV-oK5" customClass="BoxTextField" customModule="Carp" customModuleProvider="target">
                     <rect key="frame" x="45" y="121" width="195" height="35"/>
                     <color key="backgroundColor" red="0.83570172639999996" green="0.0" blue="0.50049476159999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="textColor"/>
@@ -112,7 +108,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Partida" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fDa-VH-Hz8">
-                    <rect key="frame" x="45" y="101" width="41.5" height="16"/>
+                    <rect key="frame" x="45" y="101.5" width="41.5" height="15.5"/>
                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -171,12 +167,12 @@
                     </constraints>
                 </stackView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Número de assentos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spR-xd-d0X">
-                    <rect key="frame" x="45" y="160" width="116" height="16"/>
+                    <rect key="frame" x="45" y="160.5" width="120.5" height="15.5"/>
                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bks-70-2nM" customClass="TextField" customModule="Carp" customModuleProvider="target">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bks-70-2nM" customClass="BoxTextField" customModule="Carp" customModuleProvider="target">
                     <rect key="frame" x="285" y="121" width="70" height="35"/>
                     <color key="backgroundColor" red="0.83570172639999996" green="0.0" blue="0.50049476159999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -196,19 +192,19 @@
                     <rect key="frame" x="0.0" y="235" width="375" height="204"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="12-15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Luj-Mt-bmM">
-                            <rect key="frame" x="134" y="48" width="107" height="48"/>
+                            <rect key="frame" x="135" y="48" width="105" height="47"/>
                             <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="40"/>
                             <color key="textColor" red="0.24705882352941178" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="valor a ser dividido" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WoC-SX-d1C">
-                            <rect key="frame" x="137" y="101" width="101" height="15"/>
+                            <rect key="frame" x="137" y="100" width="101.5" height="16"/>
                             <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="12"/>
                             <color key="textColor" red="0.44313725490196076" green="0.44313725490196076" blue="0.44313725490196076" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ExS-qV-okg">
-                            <rect key="frame" x="113" y="70.5" width="21" height="20.5"/>
+                            <rect key="frame" x="113.5" y="70" width="21.5" height="20"/>
                             <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -249,7 +245,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDj-sO-kTf">
-                    <rect key="frame" x="177" y="190" width="20" height="15"/>
+                    <rect key="frame" x="177" y="189" width="20" height="17.5"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="aBt-cM-gl1"/>
                     </constraints>
@@ -257,7 +253,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDv-Qg-c9s" customClass="TextField" customModule="Carp" customModuleProvider="target">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDv-Qg-c9s" customClass="BoxTextField" customModule="Carp" customModuleProvider="target">
                     <rect key="frame" x="210" y="180" width="145" height="35"/>
                     <color key="backgroundColor" red="0.83570172639999996" green="0.0" blue="0.50049476159999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="textColor"/>
@@ -265,7 +261,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restrição" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O13-6S-9qL">
-                    <rect key="frame" x="210" y="160" width="145" height="16"/>
+                    <rect key="frame" x="210" y="160.5" width="145" height="15.5"/>
                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
