--- a/Carp/Controller/Alert/AlertVC.xib
+++ b/Carp/Controller/Alert/AlertVC.xib
@@ -22,17 +22,18 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ptm-kk-HVM">
-                    <rect key="frame" x="37.5" y="66.5" width="300" height="534"/>
+                    <rect key="frame" x="34" y="66.5" width="307.5" height="534"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="ptm-kk-HVM" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.8" id="IDD-sw-MVv"/>
+                <constraint firstItem="ptm-kk-HVM" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.82" id="IDD-sw-MVv"/>
                 <constraint firstItem="ptm-kk-HVM" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.8" id="OZU-eN-z79"/>
                 <constraint firstItem="ptm-kk-HVM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="srL-Ip-5Hg"/>
                 <constraint firstItem="ptm-kk-HVM" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="vwI-mO-dBf"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
     </objects>
 </document>
